--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>louzroquai portfolio</title>
+    <title>Lou-Ann Ollivier-Portefolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/laz8dex.css">
+    <link rel="icon" type="image/x-icon" href="/images/etoileicon-8.png" />
 </head>
-<body>
-    <pre>site en construction</pre>
+<body class="index">
+    <h1>OLLIVIER LOU-ANN</h1>
+    <header class="header lien" >
+        <h1 class="header-title">Lou-Ann Ollivier</h1>
+        <nav classe="header-nav">
+            <a href="about.html">à propos</a>
+    </nav>
+</header>
+
+  </a>
+    <main class="main grid">
+        <a href="fanzine.html" class="item">
+            <img src="images/goodies.jpg" alt="demo">
+            <p>zineclub</p>
+        </a>
+        <a href="legendeurbaine.html" class="item">
+            <img src="images/édition-rose.png" alt="bouche à oreille" width="490" height="320">
+            <p>légendes urbaines</p>
+        </a>
+        <a href="poler.html" class="item">
+            <img src="images/goodies.jpg" alt="cap" width="490" height="320">
+            <p>poler</p>
+        </a>
+        <a href="sauvage.html" class="item">
+            <img src="images/sauvage.png" alt="sauvage ?" width="490" height="320">
+            <p>sauvage ?</p>
+        </a>
+    </main>    
 </body>
 </html>
