--- a/index.html
+++ b/index.html
@@ -9,32 +9,39 @@
     <link rel="icon" type="image/x-icon" href="/images/etoileicon-8.png" />
 </head>
 <body class="index">
-    <h1>OLLIVIER LOU-ANN</h1>
-    <header class="header lien" >
-        <h1 class="header-title">Lou-Ann Ollivier</h1>
-        <nav classe="header-nav">
-            <a href="about.html">à propos</a>
-    </nav>
-</header>
-
-  </a>
-    <main class="main grid">
-        <a href="fanzine.html" class="item">
-            <img src="images/goodies.jpg" alt="demo">
-            <p>zineclub</p>
+        <h1>Lou-Ann Ollivier</h1>
+        <div class="intro">
+        <div class="start">
+            "actuellement en deuxième année, j'aime l'édition Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem ratione veritatis repudiandae quas sapiente quia ducimus tempora nam itaque aut a, delectus voluptatibus optio, autem aperiam facere cumque dolor!"
+        </div>
+    <main class="grid">
+        <div class="grid label">
+        <div class="label"> Projets</div> 
+        <div class="label">Domaine</div>
+        <div class="numéro"> <img src="images/etoileicon-8.png" alt="logo" width="50" height="50"> </div>
+       
+    </div>
+</div>
+        <a class="grid" href="fanzine.html"> 
+            <span class="projets">zineclub</span>
+            <span class="domaine">édition</span>
+            <span class="numero">01</span>
         </a>
-        <a href="legendeurbaine.html" class="item">
-            <img src="images/édition-rose.png" alt="bouche à oreille" width="490" height="320">
-            <p>légendes urbaines</p>
+        <a class="grid" href="legendeurbaine.html"> 
+            <span class="projets">légendes urbaines</span>
+            <span class="domaine">mise en page</span>
+            <span class="numero">02</span>
         </a>
-        <a href="poler.html" class="item">
-            <img src="images/goodies.jpg" alt="cap" width="490" height="320">
-            <p>poler</p>
+        <a class="grid" href="poler.html"> 
+            <span class="projets">poler</span>
+            <span class="domaine">collection</span>
+            <span class="numero">03</span>
         </a>
-        <a href="sauvage.html" class="item">
-            <img src="images/sauvage.png" alt="sauvage ?" width="490" height="320">
-            <p>sauvage ?</p>
-        </a>
+        <a class="grid" href="sauvage.html"> 
+            <span class="projets">sauvage ?</span>
+            <span class="domaine">affiche</span>
+            <span class="numero">04</span>
+        </a>""
     </main>    
 </body>
 </html>
