--- a/index.html
+++ b/index.html
@@ -12,36 +12,41 @@
         <h1>Lou-Ann Ollivier</h1>
         <div class="intro">
         <div class="start">
-            "actuellement en deuxième année, j'aime l'édition Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem ratione veritatis repudiandae quas sapiente quia ducimus tempora nam itaque aut a, delectus voluptatibus optio, autem aperiam facere cumque dolor!"
+ "actuellement en deuxième année, j'aime l'édition Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem ratione veritatis repudiandae quas sapiente quia ducimus tempora nam itaque aut a, delectus voluptatibus optio, autem aperiam facere cumque dolor!"
         </div>
+
     <main class="grid">
-        <div class="grid label">
-        <div class="label"> Projets</div> 
-        <div class="label">Domaine</div>
-        <div class="numéro"> <img src="images/etoileicon-8.png" alt="logo" width="50" height="50"> </div>
+        <div class="grid">
+        <div class="grid"> Projets</div> 
+        <div class="grid">Domaine</div>
+        <div class="grid numéro"> <img src="images/etoileicon-8.png" alt="logo" width="50" height="50"> </div>
        
     </div>
 </div>
         <a class="grid" href="fanzine.html"> 
+            <img src="images/goodies-cat.png" alt="hover" class="hover-image">
             <span class="projets">zineclub</span>
             <span class="domaine">édition</span>
             <span class="numero">01</span>
         </a>
         <a class="grid" href="legendeurbaine.html"> 
+            <img src="images/édition-rose-cat.png" alt="hover" class="hover-image">
             <span class="projets">légendes urbaines</span>
             <span class="domaine">mise en page</span>
             <span class="numero">02</span>
         </a>
         <a class="grid" href="poler.html"> 
+            <img src="images/baleine-cat.png" alt="hover" class="hover-image">
             <span class="projets">poler</span>
             <span class="domaine">collection</span>
             <span class="numero">03</span>
         </a>
         <a class="grid" href="sauvage.html"> 
+            <img src="images/sauvage-cat.png" alt="hover" class="hover-image">
             <span class="projets">sauvage ?</span>
             <span class="domaine">affiche</span>
             <span class="numero">04</span>
-        </a>""
+        </a>
     </main>    
 </body>
 </html>
