--- a/index.html
+++ b/index.html
@@ -6,47 +6,47 @@
     <title>Lou-Ann Ollivier-Portefolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/laz8dex.css">
-    <link rel="icon" type="image/x-icon" href="/images/etoileicon-8.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="images/e">
 </head>
 <body class="index">
-        <h1>Lou-Ann Ollivier</h1>
+        <h1>Lou-Ann <br>Ollivier</h1>
         <div class="intro">
         <div class="start">
  "actuellement en deuxième année, j'aime l'édition Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem ratione veritatis repudiandae quas sapiente quia ducimus tempora nam itaque aut a, delectus voluptatibus optio, autem aperiam facere cumque dolor!"
         </div>
 
     <main class="grid">
-        <div class="grid">
-        <div class="grid"> Projets</div> 
-        <div class="grid">Domaine</div>
-        <div class="grid numéro"> <img src="images/etoileicon-8.png" alt="logo" width="50" height="50"> </div>
        
     </div>
 </div>
         <a class="grid" href="fanzine.html"> 
             <img src="images/goodies-cat.png" alt="hover" class="hover-image">
-            <span class="projets">zineclub</span>
-            <span class="domaine">édition</span>
+            <span class="projets">Zineclub</span>
+            <span class="domaine">Édition</span>
             <span class="numero">01</span>
         </a>
         <a class="grid" href="legendeurbaine.html"> 
             <img src="images/édition-rose-cat.png" alt="hover" class="hover-image">
-            <span class="projets">légendes urbaines</span>
-            <span class="domaine">mise en page</span>
+            <span class="projets">Légendes Urbaines</span>
+            <span class="domaine">Mise en Page</span>
             <span class="numero">02</span>
         </a>
         <a class="grid" href="poler.html"> 
             <img src="images/baleine-cat.png" alt="hover" class="hover-image">
-            <span class="projets">poler</span>
-            <span class="domaine">collection</span>
+            <span class="projets">Poler</span>
+            <span class="domaine">Collection</span>
             <span class="numero">03</span>
         </a>
         <a class="grid" href="sauvage.html"> 
             <img src="images/sauvage-cat.png" alt="hover" class="hover-image">
-            <span class="projets">sauvage ?</span>
-            <span class="domaine">affiche</span>
+            <span class="projets">Sauvage ?</span>
+            <span class="domaine">Affiche</span>
             <span class="numero">04</span>
         </a>
     </main>    
+    <footer class="footer">Rennes(35) - Paris(75018)
+        <a href="mailto:louollivier64@gmail.com/">louollivier64@gmail.com</a>
+        <a href="https://www.instagram.com/louvetoo/">Instagram</a>
+    </footer>
 </body>
 </html>
