--- a/sauvage.html
+++ b/sauvage.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>sauvage</title>
+    <link rel="stylesheet" href="styleproj.css">
+    <link rel="icon" type="image/x-icon" href="/images/etoileicon-8.png"/>
+    <title>fanzine - portefolio ollivier lou-ann</title>
+
 </head>
-<body>
-    <p>j'ai fait un SUPER zine sur un super sujet le rap prck ici on est des cool kidz et on est on point sur les dernières sorties de la <b>new wave</b></p>
-    <p>retour</p> <a href="index.html">homepage
-</body>
-</html>
+ <body>
+   <div class="sticky">
+<a class="accueil" href="index.html">Lou-Ann Ollivier</a>
+<a class="accueil" href="info.html">
+<img src="images/etoileicon-8.png" class="rotating-image" alt="Chaotic text" width="20" height="20">
+info
+</a>
+ </div>
+
+    <div class="intro">
+        <div class="start">
+            <h3>Sauvage ?</h3> réalisation d'affiche pour la journée organisée par mon établissement
+        </div>
+        <div class="bis">
+            <img src="images/point_dinterogation.png" class="rotating-image" alt="Chaotic text">
+        </div>
+    </div>
+
+ <div class="vamp">
+
+        <img class="vamp1" src="images/sauvage_xp.jpg"alt="goodies">
+         <img class="vamp3" src="images/affiche-finale.jpg" alt="poster">
+        <img class="vamp4" src="images/afficheabstract.png" alt="intérieur zineclub">
+
+    </div>
+
+    <footer class="footer">Rennes(35) - Paris(75018)
+        <a class="mail" mailto:louollivier64@gmail.com/">contact</a>
+        <a class="insta" href="https://www.instagram.com/louvetoo/">Instagram</a>
+    </footer>
