--- a/tous savoir.html
+++ b/tous savoir.html
@@ -3,18 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>poler</title>
+</head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleproj.css">
-    <link rel="icon" type="image/x-icon" href="/images/etoileicon-8.png"/>
+    <link rel="icon" type="image/x-icon" href="/images/etoileicon-8.png" />
     <title>fanzine - portefolio ollivier lou-ann</title>
 
 </head>
  <body>
-   <div class="sticky">
-<a class="accueil" href="index.html">Lou-Ann Ollivier</a>
-<a class="accueil" href="info.html">
-<img src="images/etoileicon-8.png" class="rotating-image" alt="Chaotic text" width="20" height="20">
-info
-</a>
+    <div class="sticky">
+        <a class="accueil" href="index.html">Lou-Ann Ollivier</a>
+        <a class="accueil" href="info.html">Info</a>
  </div>
 
     <div class="intro">
@@ -32,10 +37,9 @@ info
 
  <div class="vamp">
 
-        <img class="vamp1" src="images/édition-rose.png"alt="goodies">
-         <img class="vamp3" src="images/affiche-riso-n&b.png" alt="poster">
-        <video class="vamp2" src="vidéo/clapclap.mp4" autoplay muted loop></video>
-        <img class="vamp4" src="images/intérieur.jpg" alt="intérieur zineclub">
+        <img class="vamp1" src="images/goodies.JPG"alt="vampbig">
+        <img class="vamp2" src="images/goodies.JPG" alt="edito">
+        <img class="vamp3" src="images/goodies.JPG" alt="edito">
 
     </div>
 
@@ -43,3 +47,5 @@ info
         <a class="mail" mailto:louollivier64@gmail.com/">contact</a>
         <a class="insta" href="https://www.instagram.com/louvetoo/">Instagram</a>
     </footer>
+ </body>
+</html>
