--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>louzroquai portfolio</title>
+    <title>Lou-Ann Ollivier-Portefolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.typekit.net/laz8dex.css">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/e">
 </head>
-<body>
-    <pre>site en construction</pre>
+<body class="index">
+        <h1>Lou-Ann <br>Ollivier</h1>
+        <div class="intro">
+        <div class="start">
+ "actuellement en deuxième année, j'aime l'édition Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio voluptatem ratione veritatis repudiandae quas sapiente quia ducimus tempora nam itaque aut a, delectus voluptatibus optio, autem aperiam facere cumque dolor!"
+        </div>
+
+    <main class="grid">
+       
+    </div>
+</div>
+        <a class="grid" href="fanzine.html"> 
+            <img src="images/goodies-cat.png" alt="hover" class="hover-image">
+            <span class="projets">Zineclub</span>
+            <span class="domaine">Édition</span>
+            <span class="numero">01</span>
+        </a>
+        <a class="grid" href="legendeurbaine.html"> 
+            <img src="images/edition-rose-cat.png" alt="hover" class="hover-image">
+            <span class="projets">Légendes Urbaines</span>
+            <span class="domaine">Mise en Page</span>
+            <span class="numero">02</span>
+        </a>
+        <a class="grid" href="poler.html"> 
+            <img src="images/baleine-cat.png" alt="hover" class="hover-image">
+            <span class="projets">Poler</span>
+            <span class="domaine">Collection</span>
+            <span class="numero">03</span>
+        </a>
+        <a class="grid" href="sauvage.html"> 
+            <img src="images/sauvage-cat.png" alt="hover" class="hover-image">
+            <span class="projets">Sauvage ?</span>
+            <span class="domaine">Affiche</span>
+            <span class="numero">04</span>
+        </a>
+    </main>    
+    <footer class="footer">Rennes(35) - Paris(75018)
+        <a href="mailto:louollivier64@gmail.com/">louollivier64@gmail.com</a>
+        <a href="https://www.instagram.com/louvetoo/">Instagram</a>
+    </footer>
 </body>
 </html>
