--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lou-Ann Ollivier-Portefolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/laz8dex.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/e">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/etoileicon-8.png">
 </head>
 <body class="index">
         <h1>Lou-Ann <br>Ollivier</h1>
